# small_puzzles

./: .gitignore  CMakeLists.txt  README.md
longest_common_subsequence/: CMakeLists.txt  README.md  main.cpp
longest_common_subsequence/solution/: CMakeLists.txt  solution.cpp  solution.hpp
longest_common_subsequence/tests/: CMakeLists.txt  tests.cpp
sieve_of_eratosthenes/: CMakeLists.txt  sieve.cpp
template/: CMakeLists.txt  README.md  main.cpp
template/solution/: CMakeLists.txt  solution.cpp
template/tests/: CMakeLists.txt  tests.cpp
